FixNavbar&Overflow

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -6,7 +6,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     background-color: white;
-    padding: 0px 30px;
+    padding: 10px 50px;
     box-shadow: 0px 4px 4px #4242422e;
     position: fixed;
     width: 100%;
