--- a/src/styles/section/_skillsnprojects.scss
+++ b/src/styles/section/_skillsnprojects.scss
@@ -13,6 +13,7 @@
     height: 10vw;
     font-size: 64px;
     margin: 0;
+    overflow: hidden;
 }
 
 .container h1{
